--- a/video_handling.ipynb
+++ b/video_handling.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "make matplotlib figurs apper inline in the notebook rather han in a new window."
+    "make matplotlib figures apper inline in the notebook rather han in a new window."
    ]
   },
   {
@@ -148,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
